<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.tvz.tomislav.currencyconverter.screen.ConverterActivity"
    tools:showIn="@layout/activity_converter">

    <TextView
        android:id="@+id/from.label.textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/from_label"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/from.spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/to.label.textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/to_label"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/to.spinner"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/from.spinner"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:dropDownWidth="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/to.spinner"
        android:dropDownWidth="100dp"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="44dp"
        app:layout_constraintStart_toEndOf="@+id/from.spinner"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/from.currency.label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="144dp"
        android:labelFor="@+id/amount.editText"
        android:text="@string/from_currency_label_placeHolder"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <EditText
        android:id="@+id/amount.editText"
        android:layout_width="256dp"
        android:layout_height="43dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/amount_to_convert_editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.416"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/from.currency.label" />

    <TextView
        android:id="@+id/to.currency.label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="80dp"
        android:text="@string/to_currency_label_placeholder"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amount.editText" />

    <TextView
        android:id="@+id/converted.value.textView"
        android:layout_width="320dp"
        android:layout_height="46dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/to.currency.label" />

</android.support.constraint.ConstraintLayout>
